# auxiliary

./: .gitignore  README.md  __init__.py  cli.py  mundane.py  pyproject.toml  requirements.txt
dns/: __init__.py  find_domain_controllers.py  reverse_dns.py
files/: __init__.py  split_creds.py  split_lines.py
firewall/: __init__.py  apply_iptables_blocks.py
nessus/: ADDING_TOOLS_QUICKSTART.md  README.md  UNIFIED_WORKFLOW_GUIDE.md  __init__.py  add_out_of_scope.py  mundane.py  workflow_mappings.yaml
nessus/mundane_pkg/: TOOL_REGISTRY_README.md  __init__.py  analysis.py  ansi.py  constants.py  fs.py  logging_setup.py  ops.py  parsing.py  render.py  tools.py  workflow_mapper.py
network/: __init__.py  chaos_ip_extract.py  masscan_to_targets.py
web/: __init__.py  gobuster_to_eyewitness.py  webtech_fingerprint.py
